--- a/package.json
+++ b/package.json
@@ -90,8 +90,8 @@
   },
   "peerDependencies": {
     "@date-io/core": "1.3.6",
-    "@material-ui/core": "4.0.1",
-    "react": "16.8.4",
-    "react-dom": "16.8.4"
+    "@material-ui/core": "4.x",
+    "react": ">=16.8.4",
+    "react-dom": ">=16.8.4"
   }
 }
